# golge-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/glad/: glad.h
include/golge/: config.h  golge.h
include/golge/core/: animation.h  camera.h  contactListener.h  material.h  mesh.h  messages.h  shader.h  texture.h  tilemap.h  transform.h
include/golge/engine/: component.h  engine.h  entity.h  scene.h  soundManager.h
include/golge/engine/components/: animator.h  cameraComponent.h  rigidBody.h  sound.h  spriteRenderer.h  tileMapRenderer.h  transformComponent.h
include/golge/game/: component.h  engine.h  entity.h  inputManager.h  scene.h  soundManager.h
include/golge/game/components/: animator.h  cameraComponent.h  move.h  rigidBody.h  sound.h  spriteRenderer.h  tileMapRenderer.h  transformComponent.h
src/: CMakeLists.txt  config.h.in  glad.c  main.cpp
src/core/: animation.cpp  camera.cpp  contactListener.cpp  material.cpp  mesh.cpp  shader.cpp  texture.cpp  tilemap.cpp  transform.cpp
src/engine/: engine.cpp  entity.cpp  inputManager.cpp  scene.cpp  soundManager.cpp
src/engine/components/: animator.cpp  cameraComponent.cpp  rigidBody.cpp  sound.cpp  spriteRenderer.cpp  tileMapRenderer.cpp  transformComponent.cpp
src/game/: engine.cpp  entity.cpp  inputManager.cpp  scene.cpp  soundManager.cpp
src/game/components/: animator.cpp  cameraComponent.cpp  move.cpp  rigidBody.cpp  sound.cpp  spriteRenderer.cpp  tileMapRenderer.cpp  transformComponent.cpp
